2002-08-26  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkwindow-win32.c (RegisterGdkClass): Use MAX_PATH
	(from windef.h) insted of _MAX_PATH (from stdlib.h in mingw and
	MSVC, but not there in Cygwin) (#91681, Masahiro Sakai).

Mon Aug 26 12:21:16 BST 2002  Tony Gale <gale@gtk.org>

	* docs/tutorial/package-db-tutorial.sh: cleanups

	* docs/tutorial/gtk-tut.sgml: new content for the
	ItemFactory section. Originally from Robert Cleaver Ancell.

2002-08-25  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtkfilesel.c: Don't include <winsock.h> on Cygwin (#91654,
	Masahiro Sakai).

	* gtk/gtkmain.c: Compile gtk_init_abi_check and
	gtk_init_check_abi_check when on G_PLATFORM_WIN32, not just on
	G_OS_WIN32, to match gtkmain.h (#91649, Masahiro Sakai).
	(check_sizeof_GtkWindow, check_sizeof_GtkBox): Mention the
	-mms-bitfields swicth in addition to -fnative-struct.

Sun Aug 25 11:58:27 BST 2002  Tony Gale <gale@gtk.org>

	* docs/tutorial/package-db-tutorial.sh:
	update packaging script for current tutorial

	* docs/tutorial/images/*.eps: New Files
	EPS versions of the tutorial images

2002-08-25  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtkmain.h: Include gtkbox.h and gtkwindow.h on Win32, as the
	defines for struct packing checks use sizeof() on stuff from
	these. (#84211, Andreas Holzmann)

	* gtk/Makefile.am (libgtk_win32_2_0_la_DEPENDENCIES): Add
	gtk_win32res_lo. (#87101, J. Ali Harlow)

	* gdk/gdkevents.c
	* gdk/gdkinternals.h
	* gdk/x11/gdkevents-x11.c
	* gdk/win32/gdkevents-win32.c: Move the GdkEventPrivate and
	GdkEventFlags definitions from gdkevents.c to
	gdkinternals.h. Remove the duplicated definitions in
	gdkevents-x11.c and gdkevents-win32.c. (#89771)

2002-08-24  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): Let the
	system handle Alt-Space, too. Thanks to Tim Evans (#91477).

Sat Aug 24 12:46:37 BST 2002  Tony Gale <gale@gtk.org>

	* docs/tutorial/gtk-tut.sgml, examples/*:
	update g_connect_signal usage
